--- a/FoodApp/src/main/webapp/WEB-INF/web.xml
+++ b/FoodApp/src/main/webapp/WEB-INF/web.xml
@@ -5,5 +5,6 @@
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>login.jsp</welcome-file>
     <welcome-file>app.js</welcome-file>
+    <welcome-file>register.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
