--- a/FoodApp/.settings/org.eclipse.core.resources.prefs
+++ b/FoodApp/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/index.jsp=UTF-8
 encoding//src/main/webapp/login.jsp=UTF-8
+encoding//src/main/webapp/order.jsp=UTF-8
+encoding//src/main/webapp/product.jsp=UTF-8
 encoding//src/main/webapp/register.jsp=UTF-8
