--- a/FoodApp/src/main/webapp/WEB-INF/web.xml
+++ b/FoodApp/src/main/webapp/WEB-INF/web.xml
@@ -7,5 +7,8 @@
     <welcome-file>app.js</welcome-file>
     <welcome-file>register.jsp</welcome-file>
     <welcome-file>product.jsp</welcome-file>
+    <welcome-file>adminPage.jsp</welcome-file>
+    <welcome-file>adminPage-edit.jsp</welcome-file>
+    <welcome-file>adminPage-add.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
